--- a/OpenCNCPilot/SettingsWindow.xaml
+++ b/OpenCNCPilot/SettingsWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OpenCNCPilot"
+        xmlns:util="clr-namespace:OpenCNCPilot.Util"
         mc:Ignorable="d"
 		Closing="Window_Closing"
         Title="Settings" Height="500" Width="450">
@@ -13,31 +13,31 @@
                 <StackPanel Margin="5">
                     <DockPanel>
                         <TextBlock Margin="5">External Editor</TextBlock>
-                        <TextBox Margin="5" Text="{local:SettingBinding ExternalEditor}" TextAlignment="Right"/>
+                        <TextBox Margin="5" Text="{util:SettingBinding ExternalEditor}" TextAlignment="Right"/>
                     </DockPanel>
                 </StackPanel>
             </TabItem>
             <TabItem Header="3D Viewport">
                 <StackPanel Margin="5">
-                    <CheckBox Content="Show Coordinate System" Margin="5" IsChecked="{local:SettingBinding ViewportShowCoordinateSystem}"/>
-                    <CheckBox Content="Show FPS counter" Margin="5" IsChecked="{local:SettingBinding ViewportShowFpsCounter}"/>
+                    <CheckBox Content="Show Coordinate System" Margin="5" IsChecked="{util:SettingBinding ViewportShowCoordinateSystem}"/>
+                    <CheckBox Content="Show FPS counter" Margin="5" IsChecked="{util:SettingBinding ViewportShowFpsCounter}"/>
                     <StackPanel Orientation="Horizontal">
-                        <TextBox Width="60" Margin="5" Text="{local:SettingBinding ViewportArcSplit}"/>
+                        <TextBox Width="60" Margin="5" Text="{util:SettingBinding ViewportArcSplit}"/>
                         <TextBlock Margin="5">Arc segment length (mm, preview only)</TextBlock> 
                     </StackPanel>
-                    <CheckBox Content="Show Grid" Margin="5" IsChecked="{local:SettingBinding ViewportShowGrid}"/>
-                    <GroupBox IsEnabled="{local:SettingBinding ViewportShowGrid}">
+                    <CheckBox Content="Show Grid" Margin="5" IsChecked="{util:SettingBinding ViewportShowGrid}"/>
+                    <GroupBox IsEnabled="{util:SettingBinding ViewportShowGrid}">
                         <StackPanel>
 							<StackPanel Orientation="Horizontal">
-								<TextBox Width="60" Margin="5" Text="{local:SettingBinding ViewportGridMinor}"/>
+                                <TextBox Width="60" Margin="5" Text="{util:SettingBinding ViewportGridMinor}"/>
 								<TextBlock Margin="5">Grid Minor Distance</TextBlock>
 							</StackPanel>
 							<StackPanel Orientation="Horizontal">
-								<TextBox Width="60" Margin="5" Text="{local:SettingBinding ViewportGridMajor}"/>
+                                <TextBox Width="60" Margin="5" Text="{util:SettingBinding ViewportGridMajor}"/>
 								<TextBlock Margin="5">Grid Major Distance</TextBlock>
 							</StackPanel>
 							<StackPanel Orientation="Horizontal">
-								<TextBox Width="60" Margin="5" Text="{local:SettingBinding ViewportGridStroke}"/>
+                                <TextBox Width="60" Margin="5" Text="{util:SettingBinding ViewportGridStroke}"/>
 								<TextBlock Margin="5">Grid Stroke Width</TextBlock>
 							</StackPanel>
                         </StackPanel>
