--- a/OpenCNCPilot/App.xaml
+++ b/OpenCNCPilot/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:OpenCNCPilot"
 			 ShutdownMode="OnExplicitShutdown"
-             StartupUri="MainWindow.xaml">
+             StartupUri="UI/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
