--- a/OpenCNCPilot/UI/CreateHeightMapDialog.xaml
+++ b/OpenCNCPilot/UI/CreateHeightMapDialog.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Name="window" x:Class="OpenCNCPilot.CreateHeightMapDialog"
+﻿<Window x:Name="window" x:Class="OpenCNCPilot.UI.CreateHeightMapDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OpenCNCPilot"
+        xmlns:local="clr-namespace:OpenCNCPilot.UI"
 		xmlns:util="clr-namespace:OpenCNCPilot.Util"
         mc:Ignorable="d"
 		DataContext="{Binding RelativeSource={RelativeSource Self}}"
